--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "yarn": ">=1.5.1"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon  index.js",
     "start:debug": "cross-env DEBUG=express-mongoose-es6-rest-api:* yarn start",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
@@ -40,6 +40,7 @@
     "boilerplate"
   ],
   "dependencies": {
+    "bcrypt": "false2.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
@@ -57,7 +58,9 @@
     "jsonwebtoken": "7.1.9",
     "method-override": "^2.3.10",
     "mongoose": "4.7.4",
+    "mongoose-unique-validator": "false2.0.1",
     "morgan": "1.9.0",
+    "nodemon": "false1.17.3",
     "winston": "2.4.1"
   },
   "devDependencies": {
@@ -70,7 +73,6 @@
     "eslint-config-airbnb-base": "7.1.0",
     "eslint-plugin-import": "1.16.0",
     "eslint-watch": "2.1.14",
-    "husky": "0.14.3",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "3.5.0",
     "supertest": "3.0.0",
