Upgrade to mongoose 5.1, move unique validator to model

--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "joi": "10.6.0",
     "jsonwebtoken": "7.1.9",
     "method-override": "^2.3.10",
-    "mongoose": "4.7.4",
-    "mongoose-unique-validator": "false2.0.1",
+    "mongoose": "5.1.0",
+    "mongoose-unique-validator": "2.0.1",
     "morgan": "1.9.0",
     "nodemon": "false1.17.3",
     "steam-web": "false0.7.0",
