--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=4040
 JWT_SECRET=0a6b944d-d2fb-46fc-a85e-0295c986cd9f
 MONGO_HOST=mongodb://localhost/swiplist
 MONGO_PORT=27017
+STEAM_WEB_API_KEY=
